fix dark mode screen style

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,15 +11,15 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 0, 5, 10;
-    --background-start-rgb: 0, 5, 10;
-    --background-end-rgb: 0, 5, 10;
+    --foreground-rgb: 200, 200, 200;
+    --background-start-rgb: 200, 200, 200;
+    --background-end-rgb: 200, 200, 200;
   }
 }
 
 @media (prefers-color-scheme: dark) {
   *, div {
-    color: rgb(200, 200, 212);
+    color: rgb(99, 99, 110);
   }
 }
 
